--- a/Actividades.html
+++ b/Actividades.html
@@ -1,25 +1,26 @@
-<!--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Supremacía del Alba es un clan activo dentro del videojuego Destiny 2, que ofrece ayuda con actividades de temporada, PVP, PVE, Raids y mucho más">
+    <meta name="keywords" content="DESTINY 2, CLAN ACTIVO, BUNGIE, BUSCO CLAN, DESTINY PVP, DESTINY PVE, XUR, RAID">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>Actividades</title>
+    <link rel="stylesheet" href="css/style2.css">
+    <title>Actividades | Portal de Destiny 2 | Clan Supremacía del Alba</title>
 </head>
-<body>
+<body class="actividades">
     <header>
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.jpg" alt="logo">
+                <img src="img/logo 3.webp" alt="logo">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.jpg" alt="logo">
+                    <img src="img/logo 3.webp" alt="logo">
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
@@ -32,14 +33,99 @@
         </div>
     </header>
     <main>
-        <div>
-            <p></p>
+        <div class="contene">
+            <div class="contenedor_tarjeta">
+                <a href="#">
+                    <figure id="tarjeta">
+                        <img src="img/tarjeta1.webp" class="frontal" alt="Crisol">
+                        <figcaption class="trasera">
+                            <h2 class="titulo">Crisol (PvP)</h2>
+                            <hr>
+                            <p>Son partidas PvP (Jugador contra Jugador). Hay diferentes modos de juego como pueden ser los clásicos capturar la bandera por equipos. El Crisol está liderado por Lord Shaxx, personaje de la Torre al que puedes recoger contratos o entregar fichas de Crisol que ganas jugando estas partidas para mejorar tu reputación y obtener recompensas diversas.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+    
+            <div class="contenedor_tarjeta">
+                <a href="#">
+                    <figure id="tarjeta">
+                        <img src="img/tarjeta2.webp" class="frontal" alt="Vanguardia">
+                        <figcaption class="trasera">
+                            <h2 class="titulo">Vanguardia (PvE)</h2>
+                            <hr>
+                            <p>Es el modo de juego de los Asaltos, incluidos los más duros del juego que se llaman Asaltos de Ocaso y solo pueden completarse una vez por semana. Básicamente se trata de misiones cooperativas para hasta tres jugadores. El Comandante Zavala es quien está al cargo de Vanguardia y con quien debes hablar en la Torre para adquirir contratos relacionados.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+
+            <div class="contenedor_tarjeta">
+                <a href="#">
+                    <figure id="tarjeta">
+                        <img src="img/tarjeta3.webp" class="frontal" alt="Gambito">
+                        <figcaption class= "trasera">
+                            <h2 class="titulo">Gambito (PvP y PvE)</h2>
+                            <hr>
+                            <p>Es un modo de juego competitivo híbrido, a cargo del Vagabundo, dónde te enfrentas a dos equipos rivales contra los discípulos de la Oscuridad, con un matiz importante: cada equipo puede enviar a un jugador para invadir al enemigo y desbaratar sus planes. Se trata de luchar y recoger 100 orbes de luz antes que el equipo rival, para finalmente vencer a un jefe.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+    
+            <div class="contenedor_tarjeta">
+                <a href="#">
+                    <figure id="tarjeta">
+                        <img src="img/tarjeta4.webp" class="frontal" alt="Incursiones">
+                        <figcaption class="trasera">
+                            <h2 class="titulo">Incursiones | Raids</h2>
+                            <hr>
+                            <p>Una Incursión o Raid es una misión cooperativa de seis jugadores. Son muy difíciles y complejas, que requieren habilidades y equipo de comunicación y de alto nivel. A diferencia de las otras actividades, las incursiones proporcionan a los jugadores sólo el mínimo de la orientación y objetivos y en cambio a desafiar a los Guardianes de resolverlo todo a medida que avanzan.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
+
+            <div class="contenedor_tarjeta">
+                <a href="#">
+                    <figure id="tarjeta">
+                        <img src="img/tarjeta5.webp" class="frontal" alt="Desafíos de Temporada">
+                        <figcaption class="trasera">
+                            <h2 class="titulo">Desafíos de Temporada</h2>
+                            <hr>
+                            <p>Cada semana, durante las primeras 10 semanas de una temporada, aparecen automáticamente 10 nuevos desafíos para los jugadores. Algunos de los desafíos se relacionan con el contenido estacional. Estos desafíos solo se pueden completar una vez por cuenta. Completar cada desafío gana XP, polvo brillante, moneda de temporada y armas exóticas.</p>
+                        </figcaption>
+                    </figure>
+                </a>
+            </div>
         </div>
     </main>
-    <footer>
-        &copy; «Copyright 2022 por María Di Stefano» 
-   </footer>
+     <footer>
+        <div class="container-footer">
+            <div class="redes  SiteMap">
+                <h2>SiteMap</h2>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Historia.html">Historia</a></li>
+                    <li><a href="Clan.html">Clan</a></li>
+                    <li><a href="Actividades.html">Actividades</a></li>
+                    <li><a href="Formulario.html">Fomulario</a></li>
+                </ul>
+            </div>
+            <div class="redes social">
+                <h2>Redes Sociales</h2>
+                <ul class="sci">
+                    <li><a href="https://chat.whatsapp.com/I05dh73fhiF0kITElXLgDr"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://m.facebook.com/groups/763442330497657?group_view_referrer=search"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://discord.gg/cVYP5h4s"><i class="fab fa-discord"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <div class="copy">
+        <p>&copy; «Copyright 2022 por María Di Stefano» </p>
+    </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
-</html>-->
+</html>
