--- a/Clan.html
+++ b/Clan.html
@@ -4,36 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Supremacía del Alba es un clan activo dentro del videojuego Destiny 2, que ofrece ayuda con actividades de temporada, PVP, PVE, Raids y mucho más">
+    <meta name="keywords" content="DESTINY 2, CLAN ACTIVO, BUNGIE, BUSCO CLAN, DESTINY PVP, DESTINY PVE, XUR, RAID">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style2.css">
-    <title>Clan</title>
+    <title>Clan | Portal de Destiny 2 | Clan Supremacía del Alba</title>
 </head>
 <body class="Clan">
     <header>
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.jpg" alt="logo">
+                <img src="img/logo 3.webp" alt="logo">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.jpg" alt="logo">
+                    <img src="img/logo 3.webp" alt="logo">
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
                         <li><a href="Clan.html" id="selector">Clan</a></li>
-                        <!--<li><a href="Actividades.html" id="selector">Actividades</a></li>-->
+                        <li><a href="Actividades.html" id="selector">Actividades</a></li>
                         <li><a href="Formulario.html" id="selector">Formulario</a></li>
                     </ul>
                 </nav>
             </div>
         </div>
     </header>
-    <main class="galeria">
-      <h1 class="d-flex justify-content-center titulo"><u> Galeria Del Clan</u></h1>
+    <main class="clanFondo">
+      <div class="intro">
+        <div>
+          <h1><u>Supremacía del Alba</u></h1>
+          <img src="img/logo del clan.webp"  alt="logo del clan">
+          <h4>"Conservo este mural no como un recordatorio inútil y sentimental de lo que perdí. Si no como lo opuesto, recordatorio de lo que gané. PODER, la verdad de la inconsciencia de la mayoría, el control sobre los silos universales del destino.
+          Por eso estoy eternamente agradecido.."</h4>
+          <h5>-RULK, Discípulo del Testigo.</h5> <br>
+          <p>¿Cansado de jugar solo y de cambiar más de clan que de calzón? Haz llegado al lugar perfecto, ¡en Supremacía del Alba te estamos reclutando!</p>
+          <p>Si estás buscando un clan activo y sociable, únete a nuestro discord, pasa el rato y jugá con nosotros. ¡Aprendé una raid o ... todas ellas y considerá si te sentís cómodo en el equipo!</p>
+          <p>Les ofrecemos una comunidad divertida y activa, con más de 50 jugadores hispano hablantes, que está abierta a cualquier persona de más de 18 años y de todos los niveles de habilidad. Semanalmente se organizan grupos con líderes experimentados para realizar distintas actividades y desafíos como lo son: los ocasos, Gambito, Crisol y desafíos de temporada. Organizamos raids casi diarias, así como las raids con guías experimentados. También disfrutamos jugando todas las demás actividades que Destiny tiene para ofrecer. (Haz clic <a href="Actividades.html">aquí</a> para leer más sobre las Actividades disponibles)</p>
+          <p>Somos una comunidad experimentada, tranquila y en crecimiento. Nuestro objetivo es crear un ambiente saludable y libre de toxicidades para todos, ya sean miembros del clan o no... así que dime Guardian, ¿qué trae tu destino?</p>
+          <p>Contamos con juego cooperativo multiplataformas a través de nuestro canal, seguí nuestro enlace de <a href="https://discord.gg/cVYP5h4s">Discord</a> y unite.</p> <br>
+          <p>Acá abajo te dejamos algunas fotos tomadas durante la realización de actividades:</p>
+        </div>
+      </div>
+
+      <div class="galeria">
+        <h1 class="d-flex justify-content-center titulo"><u> Galería del Clan</u></h1>
         <div class="d-flex justify-content-center">
             <div id="carouselExampleIndicators" class="carousel slide w-75 m-5" data-bs-ride="true">
                 <div class="carousel-indicators">
@@ -46,48 +65,61 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/carro1.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro1.webp" class="d-block w-100" alt="imagen">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/carro2.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro2.webp" class="d-block w-100" alt="imagen">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/carro3.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro3.webp" class="d-block w-100" alt="imagen">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/carro4.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro4.webp" class="d-block w-100" alt="imagen">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/carro5.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro5.webp" class="d-block w-100" alt="imagen">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/carro6.jpg" class="d-block w-100" alt="imagen">
+                    <img src="img/carro6.webp" class="d-block w-100" alt="imagen">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
+                  <span class="visually-hidden">Anterior</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
+                  <span class="visually-hidden">Siguiente</span>
                 </button>
               </div>
         </div>
-    </main>
-    <div class="intro">
-      <div>
-        <h1>Supremacia Del Alba</h1>
-        <img src="img/logo del clan.jpg"  alt="logo del clan">
-        <h2>Somos un Clan dentro del juego Destiny 2 </h2>
-        <p>Brindamos ayuda para diversas actividades y eventos.</p>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores tempora perferendis dolorem deserunt cupiditate voluptates quas, iusto quae reiciendis facere excepturi ducimus enim veritatis tenetur voluptatum animi adipisci repudiandae cumque assumenda earum ullam sint expedita fuga nulla. Modi iusto error officia quae asperiores ut blanditiis cupiditate, quisquam eius deleniti in neque veniam tenetur. Dolorem aliquid repellendus possimus doloribus aspernatur molestias asperiores molestiae eligendi mollitia, quisquam id corrupti omnis, voluptatum voluptate aperiam ducimus commodi consequatur! Consequuntur omnis ipsum labore minima ab doloribus veniam adipisci sunt quam nesciunt sapiente soluta cum blanditiis dolore provident sint, delectus recusandae dolorem laborum, quas ad illum.</p>
       </div>
-    </div>
-    
+    </main>
     <footer>
-        &copy; «Copyright 2022 por María Di Stefano» 
-   </footer>
+      <div class="container-footer">
+          <div class="redes  SiteMap">
+              <h2>SiteMap</h2>
+              <ul>
+                  <li><a href="index.html">Inicio</a></li>
+                  <li><a href="Historia.html">Historia</a></li>
+                  <li><a href="Clan.html">Clan</a></li>
+                  <li><a href="Actividades.html">Actividades</a></li>
+                  <li><a href="Formulario.html">Fomulario</a></li>
+              </ul>
+          </div>
+          <div class="redes social">
+              <h2>Redes Sociales</h2>
+              <ul class="sci">
+                  <li><a href="https://chat.whatsapp.com/I05dh73fhiF0kITElXLgDr"><i class="fab fa-whatsapp"></i></a></li>
+                  <li><a href="https://m.facebook.com/groups/763442330497657?group_view_referrer=search"><i class="fab fa-facebook"></i></a></li>
+                  <li><a href="https://discord.gg/cVYP5h4s"><i class="fab fa-discord"></i></a></li>
+              </ul>
+          </div>
+      </div>
+  </footer>
+  <div class="copy">
+      <p>&copy; «Copyright 2022 por María Di Stefano» </p>
+  </div>
     <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
