--- a/Formulario.html
+++ b/Formulario.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Supremacía del Alba es un clan activo dentro del videojuego Destiny 2, que ofrece ayuda con actividades de temporada, PVP, PVE, Raids y mucho más">
+    <meta name="keywords" content="DESTINY 2, CLAN ACTIVO, BUNGIE, BUSCO CLAN, DESTINY PVP, DESTINY PVE, XUR, RAID">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style2.css">
-    <title>Formulario</title>
+    <title>Formulario | Portal de Destiny 2 | Clan Supremacía del Alba</title>
 </head>
 <body >
     <header>
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.jpg" alt="logo">
+                <img src="img/logo 3.webp" alt="logo">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.jpg" alt="logo">
+                    <img src="img/logo 3.webp" alt="logo">
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
                         <li><a href="Clan.html" id="selector">Clan</a></li>
-                        <!--<li><a href="Actividades.html" id="selector">Actividades</a></li>-->
+                        <li><a href="Actividades.html" id="selector">Actividades</a></li>
                         <li><a href="Formulario.html" id="selector">Formulario</a></li>
                     </ul>
                 </nav>
@@ -46,8 +48,30 @@
         </form>     
     </main>
     <footer>
-        &copy; «Copyright 2022 por María Di Stefano» 
-   </footer>
+        <div class="container-footer">
+            <div class="redes  SiteMap">
+                <h2>SiteMap</h2>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Historia.html">Historia</a></li>
+                    <li><a href="Clan.html">Clan</a></li>
+                    <li><a href="Actividades.html">Actividades</a></li>
+                    <li><a href="Formulario.html">Fomulario</a></li>
+                </ul>
+            </div>
+            <div class="redes social">
+                <h2>Redes Sociales</h2>
+                <ul class="sci">
+                    <li><a href="https://chat.whatsapp.com/I05dh73fhiF0kITElXLgDr"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://m.facebook.com/groups/763442330497657?group_view_referrer=search"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://discord.gg/cVYP5h4s"><i class="fab fa-discord"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <div class="copy">
+        <p>&copy; «Copyright 2022 por María Di Stefano» </p>
+    </div>
    <script src="script.js"></script>
 </body>
 </html>
