--- a/Historia.html
+++ b/Historia.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Supremacía del Alba es un clan activo dentro del videojuego Destiny 2, que ofrece ayuda con actividades de temporada, PVP, PVE, Raids y mucho más">
+    <meta name="keywords" content="DESTINY 2, CLAN ACTIVO, BUNGIE, BUSCO CLAN, DESTINY PVP, DESTINY PVE, XUR, RAID">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-    <title>Historia</title>
+    <title>Historia | Portal de Destiny 2 | Clan Supremacía del Alba</title>
 </head>
 <body class="grid-container">
 
     <header class="header">
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.jpg" alt="logo">
+                <img src="img/logo 3.webp" alt="logo">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.jpg" alt="logo">
+                    <img src="img/logo 3.webp" alt="logo">
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
                         <li><a href="Clan.html" id="selector">Clan</a></li>
-                        <!--<li><a href="Actividades.html" id="selector">Actividades</a></li>-->
+                        <li><a href="Actividades.html" id="selector">Actividades</a></li>
                         <li><a href="Formulario.html" id="selector">Formulario</a></li>
                     </ul>
                 </nav>
@@ -55,7 +57,7 @@
             <h1>Un resumen rápido de los años anteriores de Destiny 2</h1><br><br>
             <p>Si eres completamente nuevo en Destiny 2 o no has jugado en años, aquí tienes un resumen rápido de los principales ritmos de la historia vinculados a cada temporada. </p><br><br>
             <h2>Resumen de la historia del año 1</h2><br>
-            <img src="img/Destiny-2-un-resumen-completo-de-la-historia-del-ano.5.jpeg" alt="año uno"><br>
+            <img src="img/Destiny-2-un-resumen-completo-de-la-historia-del-ano.5.webp" alt="año uno"><br>
             <ul>
                 <li><p><b>Destiny 2 Vainilla:</b> El Viajero es capturado por Dominus Ghaul y su ejército de la Legión Roja, un grupo de élite de Cabal. Los Guardianes tuvieron que recuperar sus poderes para retomar el Viajero y la Última Ciudad. Este período se conoce como “La Guerra Roja”</p></li>
                 <li><p><b>Maldición de Osiris:</b> Los Guardianes rastrearon a Osiris a través del Bosque Infinito de Mercury. Con su ayuda, la humanidad pudo evitar que los Vex reescribieran la historia. </p></li>
@@ -63,7 +65,7 @@
             </ul><br><br>
 
             <h2>Resumen de la historia del año 2</h2><br><br>
-            <img src="img/1632445435_929_Destiny-2-un-resumen-completo-de-la-historia-del-dos.5.jpeg" alt="año dos">
+            <img src="img/1632445435_929_Destiny-2-un-resumen-completo-de-la-historia-del-dos.5.webp" alt="año dos">
 
             <ul>
                 <li><p><b> Abandonado:</b> Cayde-6, el último Hunter Vanguard, es asesinado por Uldren Sov. Los guardianes lo persiguen a través de Tangled Shore para buscar venganza. Se descubrió que Uldren fue corrompido por un Ahamkara llamado Riven, un dragón que concede deseos. Los guardianes viajan a la Ciudad de los Sueños para matar a Riven, lo que inadvertidamente condena a la ciudad a una maldición eterna. </p></li>
@@ -74,7 +76,7 @@
             </ul><br><br>
 
             <h2>Resumen de la historia del año 3</h2><br><br>
-            <img src="img/1632445436_998_Destiny-2-un-resumen-completo-de-la-historia-del-tres.5.jpeg" alt="año tres">
+            <img src="img/1632445436_998_Destiny-2-un-resumen-completo-de-la-historia-del-tres.5.webp" alt="año tres">
 
             <ul>
                 <li><p><b>Bastión de Sombras:</b> Una nave Darkness se encuentra en las profundidades de la luna de la Tierra. Los guardianes descubren un extraño orbe de la pirámide que deja una cosa clara: se acerca la oscuridad. </p></li>
@@ -89,13 +91,13 @@
             <p>Al igual que en Destiny 1, en Destiny 2 también contaremos con las tres clases básicas para cada personaje, que a diferencia de otros juegos similares, tienen un estilo de juego muy similar entre sí. La única diferencia entre ellos serán sus apariencia y sus poderes, ya que cada clase tendrá su propio árbol con habilidades.</p><br><br>
             <h2><b>Cazador</b></h2><br>
             <p>Maestros de la frontera, los cazadores son rápidos con el gatillo y letales con la espada, son astutos e implacables. Acechan en los campos de batalla y corren grandes riesgos a cambio de enormes recompensas.</p><br>
-            <img src="img/cazador.jpg" width="400px" alt="guardian"><br><br><br>
+            <img src="img/cazador.webp" width="400px" alt="guardian"><br><br><br>
             <h2><b> Titán</b></h2><br>
             <p>Máquinas de guerra blindadas, ¿Quién necesita un escalpelo cuando se tiene un martillo? Los titanes son poderosos y están listos para la guerra, y no se amilanan frente a hordas de enemigos.</p><br>
-            <img src="img/titan.jpg" width="400px" alt="guardian"><br><br><br>
+            <img src="img/titan.webp" width="400px" alt="guardian"><br><br><br>
             <h2><b>Hechicero</b></h2><br>
             <p>Portadores de poderes arcanos, los hechiceros son estudiosos de la Luz, y sus mentes albergan un arsenal de secretos letales. En el campo de batalla, esos secretos pueden hacer tambalear hasta la propia realidad</p><br>
-            <img src="img/hechicero.jpg" width="400px" alt="guardian"><br><br><br>
+            <img src="img/hechicero.webp" width="400px" alt="guardian"><br><br><br>
 
             <hr><br><br><br>
 
@@ -104,13 +106,13 @@
             
             <p>Actualmente, están confirmados tres personajes de la entrega anterior de Destiny, y que son los líderes de cada una de las facciones ya existentes. Seguirán siendo los líderes y jefes a los que habrá que ayudar en cada misión, solo que en esta ocasión en Destiny 2, nos acompañarán en alguna que otra ocasión y serán unos NPCs más participativos que antes:</p><br><br>
             <h2>Cayde-6</h2>
-            <img src="img/clayde.jpg" alt="cayde">
+            <img src="img/clayde.webp" alt="cayde">
             <p>Líder de la Vanguardia de Cazadores - Sin duda el favorito de los fans, Cayde-6 fue protagonista del teaser tráiler y del reveal tráiler. El Espectro comentó una vez "Cayde es un cazador astuto, especialista en sobrevivir en los escenarios más salvajes. Pero participar en una guerra organizada no es su fuerte. No estoy seguro de que la estrategia de 'disparar hasta la muerte' sea suficiente". Posiblemente el personaje más simpático de todos los que encontraremos, y con el que también soltaremos alguna que otra carcajada.</p><br><br>
             <h2>Zavala</h2>
-            <img src="img/zavala.jpg" alt="zavala">
+            <img src="img/zavala.webp" alt="zavala">
             <p>Líder de la Vanguardia de los Titanes - El comandante Zavalla es un veterano Titán que coordina la defensa de la Ciudad. En Destiny 2 veremos a este personaje en acción ahora que la última ciudad segura de la humanidad ha caído en manos de Lord Ghaul.</p><br><br>
             <h2>Ikora Rey</h2>
-            <img src="img/ikora.jpg" width="300px" alt="ikora">
+            <img src="img/ikora.webp" width="300px" alt="ikora">
             <p>Líder de la Vanguardia de los Hechiceros - El papel de Ikora en la Vanguardia es el de estudiar las amenazas enemigas, especialmente cualquier amenaza no convencional de las fuerzas de la oscuridad, y normalmente es la primera en reaccionar ante ellas. En Destiny 2, su liderazgo será más necesario que nunca en la lucha de la humanidad contra Lord Ghaul y su Legión Roja.</p><br><br>
 
 
@@ -121,7 +123,32 @@
     </article>
 
 
-    <footer class="footer"> &copy; «Copyright 2022 por María Di Stefano» </footer>
+    <footer>
+        <div class="container-footer">
+            <div class="redes  SiteMap">
+                <h2>SiteMap</h2>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Historia.html">Historia</a></li>
+                    <li><a href="Clan.html">Clan</a></li>
+                    <li><a href="Actividades.html">Actividades</a></li>
+                    <li><a href="Formulario.html">Fomulario</a></li>
+                </ul>
+            </div>
+            <div class="redes social">
+                <h2>Redes Sociales</h2>
+                <ul class="sci">
+                    <li><a href="https://chat.whatsapp.com/I05dh73fhiF0kITElXLgDr"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://m.facebook.com/groups/763442330497657?group_view_referrer=search"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://discord.gg/cVYP5h4s"><i class="fab fa-discord"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="copy">
+            <p>&copy; «Copyright 2022 por María Di Stefano» </p>
+        </div>
+    </footer>
+   
     <script src="script.js"></script>
   </body>
 </html>
