--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Supremacía del Alba es un clan activo dentro del videojuego Destiny 2, que ofrece ayuda con actividades de temporada, PVP, PVE, Raids y mucho más">
+    <meta name="keywords" content="DESTINY 2, CLAN ACTIVO, BUNGIE, BUSCO CLAN, DESTINY PVP, DESTINY PVE, XUR, RAID">
+    
     <link rel="stylesheet" href="css/style2.css">
-    <title>Document</title>
+    <title>Inicio | Portal de Destiny 2 | Clan Supremacía del Alba</title>
 </head>
 <body class="index">
     <header>
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.jpg" alt="logo">
+                <img src="img/logo 3.webp" alt="logo">
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.jpg" alt="logo">
+                    <img src="img/logo 3.webp" alt="logo">
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
                         <li><a href="Clan.html" id="selector">Clan</a></li>
-                        <!--<li><a href="Actividades.html" id="selector">Actividades</a></li>-->
+                        <li><a href="Actividades.html" id="selector">Actividades</a></li>
                         <li><a href="Formulario.html" id="selector">Formulario</a></li>
                     </ul>
                 </nav>
@@ -35,16 +36,14 @@
         <div class="conteiner-cover">
             <div class="cover">
                 <div class="text">
-                    <h1>Supremacia del alba</h1>
+                    <h1>Supremacía del Alba</h1>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero excepturi eum, cum veniam aperiam nihil iusto quisquam vitae libero accusantium vel, modi similique omnis sequi! Vero illo voluptatibus doloremque quidem?
-                    </p>
-
+                    <p>¡Somos una comunidad experimentada, tranquila y en crecimiento, abierta a todos los jugadores! Nuestro objetivo es crear un ambiente saludable y libre de toxicidades para todos, ya sean miembros del clan o no.</p>
                     <a href="Clan.html">
                     <input  type="button" value="Leer mas"  ></a>
                 </div>
                 <div class="fondo">
-                    <img src="img/index.jpg" alt="Un poco ">
+                    <img src="img/index.webp" alt="Un poco ">
                 </div>
             </div>
         </div>
@@ -56,9 +55,32 @@
         </div>
     </section>
     <footer>
-         &copy; «Copyright 2022 por María Di Stefano» 
+        <div class="container-footer">
+            <div class="redes  SiteMap">
+                <h2>SiteMap</h2>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Historia.html">Historia</a></li>
+                    <li><a href="Clan.html">Clan</a></li>
+                    <li><a href="Actividades.html">Actividades</a></li>
+                    <li><a href="Formulario.html">Fomulario</a></li>
+                </ul>
+            </div>
+            <div class="redes social">
+                <h2>Redes Sociales</h2>
+                <ul class="sci">
+                    <li><a href="https://chat.whatsapp.com/I05dh73fhiF0kITElXLgDr"><i class="fab fa-whatsapp"></i></a></li>
+                    <li><a href="https://m.facebook.com/groups/763442330497657?group_view_referrer=search"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="https://discord.gg/cVYP5h4s"><i class="fab fa-discord"></i></a></li>
+                </ul>
+            </div>
+        </div>
     </footer>
+    <div class="copy">
+        <p>&copy; «Copyright 2022 por María Di Stefano» </p>
+    </div>
 
+    <script src="https://kit.fontawesome.com/41bcea2ae3.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
 </body>
-</html>
+</html> 
