--- a/Historia.html
+++ b/Historia.html
@@ -15,13 +15,13 @@
     <header class="header">
         <div class="conteiner-menu">
             <div class="logo">
-                <img src="img/logo 3.webp" alt="logo">
+                <a href="index.html"><img src="img/logo 3.webp" alt="logo"></a>
             </div>
             <div class="menu">
                 <i class="fas fa-bars" id="btn_menu"></i>
                 <div id="back_menu"></div>
                 <nav id="nav">
-                    <img src="img/logo 3.webp" alt="logo">
+                    <a href="index.html"><img src="img/logo 3.webp" alt="logo"></a>
                     <ul>
                         <li><a href="index.html" id="selector">Incio</a></li>
                         <li><a href="Historia.html" id="selector">Historia</a></li>
